# Machine-Learning-Systems-Engineering

./: ProjectDocumentation.txt  README.md
projectfiles/: Dockerfile  model_pipeline.pkl  pyproject.toml  submission-namespace.yaml
projectfiles/.k8s/base/: kustomization.yaml
projectfiles/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml
projectfiles/.k8s/overlays/prod/: kustomization.yaml  virtual-service.yaml
projectfiles/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
projectfiles/src/: housing_predict.py  main.py
projectfiles/tests/: test_src.py
